# resume-jd-irs

./: main.py  metadata.csv  pyproject.toml  server.py  tf-idf_vectorizer.py  tfidf_vectorizer.joblib
frontend/: package.json
frontend/src/: App.jsx
